<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Just Java</string>
    <string name="hint">Name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order">ORDER</string>
</resources>